--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             class="flex flex-col gap-8 text-center text-sm font-bold md:flex-row md:items-center"
           >
             <a href="/index.html">Acerca de</a>
+            <a href="testimoniales.html">Testimonios</a>
             <a
               href="curso.html"
               class="bg-gray-200 text-black py-3 px-8 rounded-full hover:cursor-pointer"
